# test_task_raft

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analytics.ipynb  docker-compose.yml  main.py  pyproject.toml  stats.json
agents/: base_agent.py  career_advisor.py  critic.py  market_analyst.py  salary_estimator.py  stats_collector.py
core/: hh_client.py  llm_client.py  models.py  pipeline.py  role_clarifier.py
examples/TC01/: report.json  report.md
examples/TC02/: report.json  report.md
examples/TC03/: report.json  report.md
output/: report_writer.py
